# opencv

./: .gitignore
00-show-picture/: CMakeLists.txt  main.cpp
01-show-video/: CMakeLists.txt  display.cpp  jump.cpp
02-camera/: CMakeLists.txt  capture.cpp
03-write-video/: CMakeLists.txt  write.cpp
04-resize/: 1920_1080_p420.yuv  CMakeLists.txt  resize.cpp  resize.py
